--- a/dashboard/templates/antibiogram.html
+++ b/dashboard/templates/antibiogram.html
@@ -123,6 +123,9 @@
               </tbody>
             </table>
           </div>
+          <div class="card-footer text-muted">
+            Database used: Resfinder <br>
+          </div>
         </div>
       </div>
     </div>
