--- a/dashboard/templates/modeldetails.html
+++ b/dashboard/templates/modeldetails.html
@@ -73,6 +73,10 @@
               <b>Training set:</b> <span id="trainingset"></span><br>
               <b>Testing set:</b> <span id="testingset"></span><br>
             </p>
+            <h5 class="card-title">Feature Importance</h5>
+            <p class="card-text">
+              <span id="fi"></span>
+            </p>
           </div>
         </div>
       </div>
@@ -118,7 +122,7 @@
       function updatePerformanceStats(selectedOption) {
       // Update the performance statistics based on the selected antibiotic option
         if (selectedOption === "1") {
-          document.getElementById("model").innerText = "Support Vector Machine";
+          document.getElementById("model").innerText = "Random Forest";
           document.getElementById("resistant").innerText = "{{ num_resistant1 }}";
           document.getElementById("susceptible").innerText = "{{ num_susceptible1 }}";
           document.getElementById("total").innerText = "{{ total_samples1 }}";
@@ -132,6 +136,7 @@
           document.getElementById("roc").innerText = "{{ roc_curve }}";
           document.getElementById("roc").innerHTML = '<img src="{% static "cefotaxime_roc_curve.png" %}" alt="ROC curve" width="400" height="300">';
           document.getElementById("cm").innerHTML = '<img src="{% static "cefotaxime_confusion_matrix.png" %}" alt="Confusion matrix" width="400" height="300">';
+          document.getElementById("fi").innerHTML = '<img src="{% static "cefotaxime_features.png" %}" alt="Feature Importance" width="490" height="300">';
         } 
         else if (selectedOption === "2") {
           document.getElementById("model").innerText = "Random Forest";
@@ -147,6 +152,7 @@
           document.getElementById("auc").innerText = "{{ auc2 }}";
           document.getElementById("roc").innerHTML = '<img src="{% static "ceftriaxone_roc_curve.png" %}" alt="ROC curve" width="400" height="300">';
           document.getElementById("cm").innerHTML = '<img src="{% static "ceftriaxone_confusion_matrix.png" %}" alt="Confusion matrix" width="400" height="300">';
+          document.getElementById("fi").innerHTML = '<img src="{% static "ceftriaxone_features.png" %}" alt="Feature Importance" width="490" height="300">';
         }
         else if (selectedOption === "3") {
           document.getElementById("model").innerText = "Random Forest";
@@ -162,6 +168,7 @@
           document.getElementById("auc").innerText = "{{ auc3 }}";
           document.getElementById("roc").innerHTML = '<img src="{% static "ciprofloxacin_roc_curve.png" %}" alt="ROC curve" width="400" height="300">';
           document.getElementById("cm").innerHTML = '<img src="{% static "ciprofloxacin_confusion_matrix.png" %}" alt="Confusion matrix" width="400" height="300">';
+          document.getElementById("fi").innerHTML = '<img src="{% static "ciprofloxacin_features.png" %}" alt="Feature Importance" width="490" height="300">';
         }
         else if (selectedOption === "4") {
           document.getElementById("model").innerText = "Extreme Gradient Boost";
@@ -177,6 +184,7 @@
           document.getElementById("auc").innerText = "{{ auc4 }}";
           document.getElementById("roc").innerHTML = '<img src="{% static "gentamicin_roc_curve.png" %}" alt="ROC curve" width="400" height="300">';
           document.getElementById("cm").innerHTML = '<img src="{% static "gentamicin_confusion_matrix.png" %}" alt="Confusion matrix" width="400" height="300">';
+          document.getElementById("fi").innerHTML = '<img src="{% static "gentamicin_features.png" %}" alt="Feature Importance" width="490" height="300">';
         }
         else if (selectedOption === "5") {
           document.getElementById("model").innerText = "Random Forest";
@@ -192,6 +200,7 @@
           document.getElementById("auc").innerText = "{{ auc5 }}";
           document.getElementById("roc").innerHTML = '<img src="{% static "levofloxacin_roc_curve.png" %}" alt="ROC curve" width="400" height="300">';
           document.getElementById("cm").innerHTML = '<img src="{% static "levofloxacin_confusion_matrix.png" %}" alt="Confusion matrix" width="400" height="300">';
+          document.getElementById("fi").innerHTML = '<img src="{% static "levofloxacin_features.png" %}" alt="Feature Importance" width="490" height="300">';
         }
       }
     </script>
