--- a/dashboard/templates/modeldetails.html
+++ b/dashboard/templates/modeldetails.html
@@ -101,7 +101,6 @@
               <b>Accuracy:</b> <span id="accuracy"></span><br>
               <b>Precision:</b> <span id="precision"></span><br>
               <b>Recall:</b> <span id="recall"></span><br>
-              <b>Matthew's correlation coefficient:</b> <span id="mcc"></span><br>
               <b>Area under the ROC curve:</b> <span id="auc"></span><br>
               <b>ROC curve:</b> <span id="roc"></span><br>
             </p>
@@ -131,7 +130,7 @@
           document.getElementById("accuracy").innerText = "{{ accuracy1 }}";
           document.getElementById("precision").innerText = "{{ precision1 }}";
           document.getElementById("recall").innerText = "{{ recall1 }}";
-          document.getElementById("mcc").innerText = "{{ mcc1 }}";
+          //document.getElementById("mcc").innerText = "{{ mcc1 }}";
           document.getElementById("auc").innerText = "{{ auc1 }}";
           document.getElementById("roc").innerText = "{{ roc_curve }}";
           document.getElementById("roc").innerHTML = '<img src="{% static "cefotaxime_roc_curve.png" %}" alt="ROC curve" width="400" height="300">';
@@ -148,7 +147,7 @@
           document.getElementById("accuracy").innerText = "{{ accuracy2 }}";
           document.getElementById("precision").innerText = "{{ precision2 }}";
           document.getElementById("recall").innerText = "{{ recall2 }}";
-          document.getElementById("mcc").innerText = "{{ mcc2 }}";
+          //document.getElementById("mcc").innerText = "{{ mcc2 }}";
           document.getElementById("auc").innerText = "{{ auc2 }}";
           document.getElementById("roc").innerHTML = '<img src="{% static "ceftriaxone_roc_curve.png" %}" alt="ROC curve" width="400" height="300">';
           document.getElementById("cm").innerHTML = '<img src="{% static "ceftriaxone_confusion_matrix.png" %}" alt="Confusion matrix" width="400" height="300">';
@@ -164,7 +163,7 @@
           document.getElementById("accuracy").innerText = "{{ accuracy3 }}";
           document.getElementById("precision").innerText = "{{ precision3 }}";
           document.getElementById("recall").innerText = "{{ recall3 }}";
-          document.getElementById("mcc").innerText = "{{ mcc3 }}";
+          //document.getElementById("mcc").innerText = "{{ mcc3 }}";
           document.getElementById("auc").innerText = "{{ auc3 }}";
           document.getElementById("roc").innerHTML = '<img src="{% static "ciprofloxacin_roc_curve.png" %}" alt="ROC curve" width="400" height="300">';
           document.getElementById("cm").innerHTML = '<img src="{% static "ciprofloxacin_confusion_matrix.png" %}" alt="Confusion matrix" width="400" height="300">';
@@ -180,7 +179,7 @@
           document.getElementById("accuracy").innerText = "{{ accuracy4 }}";
           document.getElementById("precision").innerText = "{{ precision4 }}";
           document.getElementById("recall").innerText = "{{ recall4 }}";
-          document.getElementById("mcc").innerText = "{{ mcc4 }}";
+          //document.getElementById("mcc").innerText = "{{ mcc4 }}";
           document.getElementById("auc").innerText = "{{ auc4 }}";
           document.getElementById("roc").innerHTML = '<img src="{% static "gentamicin_roc_curve.png" %}" alt="ROC curve" width="400" height="300">';
           document.getElementById("cm").innerHTML = '<img src="{% static "gentamicin_confusion_matrix.png" %}" alt="Confusion matrix" width="400" height="300">';
@@ -196,7 +195,7 @@
           document.getElementById("accuracy").innerText = "{{ accuracy5 }}";
           document.getElementById("precision").innerText = "{{ precision5 }}";
           document.getElementById("recall").innerText = "{{ recall5 }}";
-          document.getElementById("mcc").innerText = "{{ mcc5 }}";
+          //document.getElementById("mcc").innerText = "{{ mcc5 }}";
           document.getElementById("auc").innerText = "{{ auc5 }}";
           document.getElementById("roc").innerHTML = '<img src="{% static "levofloxacin_roc_curve.png" %}" alt="ROC curve" width="400" height="300">';
           document.getElementById("cm").innerHTML = '<img src="{% static "levofloxacin_confusion_matrix.png" %}" alt="Confusion matrix" width="400" height="300">';
